# timestep

./: .deepsource.toml  .dockerignore  .gitignore  .gitmodules  AGENTS.md  Caddyfile  Makefile  Modelfile  README.md  chat_template.jinja  compose.yaml  compose.yml  docker-compose.python.yml  docker-compose.test.yml  docker-compose.typescript.yml  docker-compose.yml  docker-entrypoint.sh  main.py  package-lock.json  package.json  pyproject.toml  train.py  train.yaml
.github/workflows/: publish.yml
app/: a2a_server.py  index.css  index.html  index.js  mcp_server.py  test_client.py
apps/chatkit-starter/: README.md  package-lock.json  package.json  playwright.config.js.ts  playwright.config.ts
apps/chatkit-starter/backend-ts/: deno.json  main.ts  server.ts
apps/chatkit-starter/frontend/: package.json
apps/chatkit-starter/scripts/: run-backend-js.sh  run-backend.sh
apps/cozy-cat-lounge/: README.md  package-lock.json  package.json  playwright.config.ts
apps/cozy-cat-lounge/backend-ts/: cat_agent.ts  cat_state.ts  cat_store.ts  debug-stub.ts  deno.json  main.ts  memory_store.ts  server.ts  thread_item_converter.ts
apps/cozy-cat-lounge/frontend/: package.json  vite.config.ts
apps/customer-support/: README.md  package-lock.json  package.json
apps/metro-map/: README.md  package-lock.json  package.json
apps/news-guide/: README.md  package-lock.json  package.json
database/: README.md
database/migrations/: 001_initial_schema.sql
docs/: mkdocs.yml
docs/docs/: architecture.md  category-theory.md  dbos-workflows.md  getting-started.md  index.md  ologs.md  string-diagrams.md  use-cases.md
docs/scripts/: generate_docs.py
examples/: __init__.py
examples/gaia/: __init__.py  agent.py  environment.py  loop.py
examples/python/: a2a_server.py  compose.yml  mcp_server.py  test_client.py
examples/typescript/: a2a_server.ts  compose.yml  mcp_server.ts  mlflow.ts  test_client.ts
lib/python/: README.md  __init__.py
lib/typescript/: README.md  index.ts
migrations/: 001_initial_schema.sql  002_add_openai_messages.sql  003_create_agents_table.sql  004_seed_default_agents.sql  005_add_agent_id_to_tasks.sql  006_add_context_parent_relationship.sql
python/: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml
python/examples/: agent_adapter_example.py  core_example.py  dbos_workflow_example.py  eval_example.py  streaming_agent_example.py  streaming_example.py
python/tests/: run_test.py  test_a2a_agent_executor.py  test_a2a_integration.py  test_a2a_server.py  test_cross_language_py_to_ts.py  test_cross_language_ts_to_py.py  test_dbos_workflows.py  test_eval.py  test_run_agent.py  test_same_language_py_to_py.py
python/timestep/: __init__.py  _vendored_imports.py  ag_ui_client.py  ag_ui_server.py  agent_store.py  app_dir.py  database_run_state_store.py  db_connection.py  dbos_config.py  guardrail_registry.py  index.py  main.py  mcp_server_proxy.py  models.py  multi_model_provider.py  multi_provider.py  ollama_model.py  ollama_model_provider.py  ollama_provider.py  postgres_helper.py  pyproject.toml  run_state_store.py  schema.py  session_store.py  tool_registry.py  tools.py  workflows.py
python/timestep/_vendored/agents/: __init__.py
python/timestep/a2a/: __init__.py  __main__.py  agent_executor.py  handoff.py  message_converter.py  postgres_agent_store.py  postgres_task_store.py  server.py
python/timestep/api/: cli.py  server.py
python/timestep/core/: __init__.py  agent.py  agent_events.py  agent_workflow.py  episode.py  tools.py  types.py
python/timestep/data/: anthropic_claude-sonnet-4-5.jsonl  gpt-5.False.jsonl  gpt-5.True.jsonl  ollama_gpt-oss_120b-cloud.jsonl  ollama_smollm2_1.7b.jsonl
python/timestep/eval/: __init__.py  agent.py  cli.py  episode.py  graders.py  suite.py  tools.py
python/timestep/mcp/: __init__.py  __main__.py  server.py
python/timestep/model_providers/: multi_model_provider.py
python/timestep/models/: ollama_model.py
python/timestep/pglite_sidecar/: __init__.py  client.py  sidecar.js
python/timestep/services/: agent.py  agent_service.py  environment.py  executor.py  guardrails.py
python/timestep/stores/: agent_store.py  session.py
python/timestep/utils/: __init__.py  constants.py  exceptions.py  hashing.py  helpers.py  io.py  jsonl.py  messages.py  types.py
rust/: Cargo.toml  README.md
rust/src/: main.rs  test_case.rs
rust/src/harness/: mod.rs  python_bridge.rs  runner.rs  typescript_bridge.rs
rust/tests/behavior/: agent_non_streaming_test.json  agent_streaming_test.json
scripts/: gaia_eval.py  personal_assistant_app.py  personal_assistant_eval.py  personal_assistant_eval_mlflow.py  personal_assistant_eval_openlit.py  personal_assistant_test_client.py  test_client.py  weather_assistant_agent.py  weather_assistant_agent_test_client.py  weather_assistant_app.py  weather_assistant_test_client.py
timestep/: __init__.py  agent.py  environment.py  loop.py
timestep.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
typescript/: .eslintrc.json  README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  vitest.config.ts
typescript/examples/: agent_adapter_example.ts  core_example.ts  dbos_workflow_example.ts  eval_example.ts  streaming_agent_example.ts  streaming_example.ts
typescript/tests/: debug_partial.ts  run_test.ts  test_a2a_agent_executor.ts  test_a2a_integration.ts  test_a2a_server.ts  test_cross_language_py_to_ts.ts  test_cross_language_ts_to_py.ts  test_dbos_workflows.ts  test_eval.ts  test_helpers.ts  test_run_agent.ts  test_same_language_ts_to_ts.ts
typescript/timestep/: README.md  ag_ui_client.ts  ag_ui_server.ts  agent_store.ts  app_dir.ts  database_run_state_store.ts  db_connection.ts  dbos_config.ts  index.ts  main.ts  mcp_server_proxy.ts  models.ts  multi_model_provider.ts  multi_provider.ts  ollama_model.ts  ollama_model_provider.ts  ollama_provider.ts  package-lock.json  package.json  pnpm-lock.yaml  run_state_store.ts  schema.ts  session_store.ts  tool_registry.ts  tools.ts  tsconfig.json  vitest.config.ts  workflows.ts
(+236 files in other folders)
