[project]
name = "timestep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "av>=16.0.1",
    "datasets>=4.4.1",
    "num2words>=0.5.14",
    "ollama>=0.6.1",
    "peft>=0.18.0",
    "pillow>=12.0.0",
    "sentencepiece>=0.2.0",
    "tensorboardx>=2.6.4",
    "torch>=2.9.1",
    "torchcodec",
    "torchvision>=0.24.1",
]
