[project]
name = "timestep"
version = "0.1.0"
description = "A unified RL-style evaluation framework for AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Michael Schock", email = "mjschock@example.com"}
]
keywords = ["evaluation", "reinforcement-learning", "agents", "benchmarking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
gaia = [
    "datasets>=2.0.0",
    "huggingface-hub>=0.16.0",
    "openai>=1.0.0",
    "ddgs>=1.0.0",
]
dev = [
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["timestep*"]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "W",  # pycodestyle warnings
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T20", # flake8-print
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "UP007",  # Use X | Y syntax (requires Python 3.10+, we target 3.9+)
]

[tool.ruff.lint.isort]
known-first-party = ["timestep", "examples"]

[tool.ruff.lint.per-file-ignores]
"examples/**/*.py" = ["T201"]  # Allow print statements in example code

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.9"

