[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timestep"
version = "2026.0.59"
description = "Timestep AI - MVP Agent System with Human-in-the-Loop, Guardrails, Handoffs, and Sessions"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "openai>=2.9.0,<3",
    "a2a-sdk[http-server,postgresql]>=0.3.0",
    "uvicorn>=0.23.0",
    "pyyaml>=6.0",
    "httpx>=0.24.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
timestep = "timestep.api.cli:cli_main"

[tool.hatch.build.targets.wheel]
packages = ["timestep"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-vv -s --tb=short"
