[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "timestep"
version = "2026.1.0"
description = "Timestep AI Agents SDK - Core agent-environment loop with evaluation harness"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
[project.scripts]
timestep = "timestep.eval.cli:main"
[tool.hatch.build.targets.wheel]
packages = ["timestep"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
