[package]
name = "timestep-harness"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "timestep-test"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Process execution
which = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Temporary files
tempfile = "3.0"

